<resources>
    <string name="app_name">Flutter Links</string>
    <string name="connection_status">Status:</string>
    <string name="scan">Run Scan</string>
    <string name="stop">Stop</string>
    <string name="connection_connected">Connected</string>
    <string name="connection_disconnected">Disconnected</string>
    <string name="disconnect">Disconnect</string>
    <string name="positive_response">OK</string>
    <string name="error_ble_unsupported_title">UNSUPPORTED DEVICE</string>
    <string name="error_ble_unsupported_text">Your tablet does not support Bluetooth LE - Closing application</string>
    <string name="error_enable_bluetooth_title">ENABLE BLUETOOTH</string>
    <string name="error_enable_bluetooth_text">Bluetooth is currently disabled. Press OK to enable it. \nNote that you cannot use Flutter without Bluetooth enabled.</string>
    <string name="error_unknown_device_title">UNKNOWN DEVICE</string>
    <string name="error_unknown_device_text">An unknown device was detected.</string>
    <string name="error_large_screen_title">LARGE SCREEN</string>
    <string name="error_large_screen_text">Flutter Links is currently optimized for a large screen experience. Please use Flutter Links with a tablet that has at least a 640dp x 480dp screen.</string>
    <string name="error_email_server_title">EMAIL</string>
    <string name="error_email_server_text">There was an error sending the data log. Please try again later.</string>
    <string name="error_no_wifi_title">CONNECT TO WIFI</string>
    <string name="error_no_wifi_text">You need to be connected to WiFi before you can send a data log.</string>
    <string name="error_data_log_title">DATA LOG</string>
    <string name="error_recording_title">RECORDING</string>
    <string name="error_unable_to_connect_title">Unable to Connect</string>
    <string name="main_prompt">What would you like to do?</string>
    <string name="stream_sensor">\'R\': stream sensor readings for 10 seconds</string>
    <string name="set_an_input">\'s\': set an input</string>
    <string name="set_proportional">\'p\':: set a proportional relationship</string>
    <string name="remove_relationship">\'x\': remove a relationship</string>
    <string name="remove_all">\'X\': remove relationships for all outputs</string>
    <string name="read_sensors">\'r\': read sensors</string>
    <string name="output_prompt">What type of output?</string>
    <string name="servo">\'s\': servo</string>
    <string name="red_led">\'r\': red LED</string>
    <string name="green_led">\'g\': green LED</string>
    <string name="blue_led">\'b\': blue LED</string>
    <string name="volume_buzzer">\'v\': volume of the buzzer</string>
    <string name="frequency_buzzer">\'f\': frequency of the buzzer</string>
    <string name="scanning">Scanning for Flutters&#8230;</string>
    <string name="scan_timeout_prompt">Don\'t see your Flutter?</string>
    <string name="rescan">Rescan</string>
    <string name="connect_flutter">CONNECT FLUTTER</string>
    <string name="not_connected_title">Unable to Connect</string>
    <string name="not_connected_message">Your tablet was not able to connect to your Flutter. Please try again.</string>
    <string name="not_connected_button">Try Again</string>
    <string name="disconnected_title">Device Disconnected</string>
    <string name="disconnected_message">Your Flutter was disconnected from your tablet. Please reconnect.</string>
    <string name="disconnected_button">Connect Flutter</string>
    <string name="data_los">DATA LOGS</string>
    <string name="speaker">SPEAKER</string>
    <string name="lowercase_speaker">Speaker</string>
    <string name="tutorials">Tutorials</string>
    <string name="glossary">Glossary</string>
    <string name="voice_prompts">Voice Prompts</string>
    <string name="leds">LEDs</string>
    <string name="servos">Servos</string>
    <string name="sensors">Sensors</string>
    <string name="dialog_sensor">What sensor is connected to</string>
    <string name="select_sensor">Select Sensor</string>
    <string name="sensor_1">Sensor 1</string>
    <string name="sensor_3">Sensor 3</string>
    <string name="sensor_2">Sensor 2</string>
    <string name="help">help</string>
    <string name="advanced">advanced</string>
    <string name="servo_1">Servo 1</string>
    <string name="servo_2">Servo 2</string>
    <string name="servo_3">Servo 3</string>
    <string name="led_3">LED 3</string>
    <string name="led_2">LED 2</string>
    <string name="led_1">LED 1</string>
    <string name="select_low_value">Select Low Value</string>
    <string name="select_high_value">Select High Value</string>
    <string name="select_relationship">Select Relationship</string>
    <string name="choose_relationship">Choose Relationship</string>
    <string name="choose_sensor">Choose Sensor</string>
    <string name="choose_position">Choose Position</string>
    <string name="clean_up_logs">Clean Up Logs</string>
    <string name="get_log">Get Log</string>
    <string name="open_log">Open Log</string>
    <string name="send_log">Send Log</string>
    <string name="play_sensors">Play Sensors</string>
    <string name="record_data">Record Data</string>
    <string name="data_recording">Data Recording</string>
    <string name="pause_sensors">Pause Sensors</string>
    <string name="send">Send</string>
    <string name="hint_email_address">email address</string>
    <string name="send_to">Send to:</string>
    <string name="message">Message:</string>
    <string name="send_data_log">Send Data Log</string>
    <string name="set_color">Set Color</string>
    <string name="choose_color">Choose Color</string>
    <string name="final_color">Final Color:</string>
    <string name="vibrance">Vibrance</string>
    <string name="color">Color</string>
    <string name="darkness">Darkness</string>
    <string name="pre_mixed">Pre-Mixed:</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="air_quality">Air Particles</string>
    <string name="sound">Sound</string>
    <string name="distance">Distance</string>
    <string name="soil_moisture">Soil Moisture</string>
    <string name="light">Light</string>
    <string name="no_sensor">No Sensor</string>
    <string name="barometric_pressure">Barometric Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="set_sensor">Set Sensor</string>
    <string name="choose_flutter">CHOOSE YOUR FLUTTER</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="no_flutter_default">To set up, please first connect your Flutter.</string>
    <string name="no_flutter_robot">To set up your robot, please first connect your Flutter.</string>
    <string name="no_flutter_sensor">To set up sensors, please first connect your Flutter.</string>
    <string name="bright">Bright</string>
    <string name="dark">Dark</string>
    <string name="dry">Dry</string>
    <string name="wet">Wet</string>
    <string name="analog_or_unknown">Analog / Unknown</string>
    <string name="sensor_port_1">What type of sensor is connected to Port 1?</string>
    <string name="sensor_port_2">What type of sensor is connected to Port 2?</string>
    <string name="sensor_port_3">What type of sensor is connected to Port 3?</string>
    <string name="no_flutter">No Flutters Found</string>
    <string name="robot">Robot</string>
    <string name="data_log">Data Log</string>
    <string name="save_link">Save Link</string>
    <string name="set_linked_sensor">Set Linked Sensor</string>
    <string name="set_relationship">Set Relationship</string>
    <string name="set_maximum_position">Set Maximum Position</string>
    <string name="set_minimum_position">Set Minimum Position</string>
    <string name="set_up_servo">Set Up Servo</string>
    <string name="proportional">Proportional</string>
    <string name="cumulative">Cumulative</string>
    <string name="change">Change</string>
    <string name="frequency">Frequency</string>
    <string name="amplitude">Amplitude</string>
    <string name="constant">Constant</string>
    <string name="switch_relationship">Switch</string>
    <string name="save">Save</string>
    <string name="linked_sensor">Linked Sensor</string>
    <string name="relationship">Relationship</string>
    <string name="set_up_led">Set Up LED</string>
    <string name="sensor_data">Sensor Data</string>
    <string name="set_maximum_color">Set Maximum Color</string>
    <string name="set_minimum_color">Set Minimum Color</string>
    <string name="maximum_color">Maximum Color</string>
    <string name="minimum_color">Minimum Color</string>
    <string name="set_up_speaker">Set Up Speaker</string>
    <string name="volume">Volume</string>
    <string name="set_maximum_volume">Set Maximum Volume</string>
    <string name="set_minimum_volume">Set Minimum Volume</string>
    <string name="set_minimum_pitch">Set Minimum Pitch</string>
    <string name="set_maximum_pitch">Set Maximum Pitch</string>
    <string name="pitch">Pitch</string>
    <string name="zero">0</string>
    <string name="one_hundred">100</string>
    <string name="far">Far</string>
    <string name="near">Near</string>
    <string name="humid">Humid</string>
    <string name="loud">Loud</string>
    <string name="quiet">Quiet</string>
    <string name="cold">Cold</string>
    <string name="hot">Hot</string>
    <string name="slow">Slow</string>
    <string name="fast">Fast</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="sensor_settings">Sensor Settings:</string>
    <string name="link_settings">Link Settings:</string>
    <string name="time_constant">Time Constant:</string>
    <string name="speed">Speed:</string>
    <string name="sensor_center_value">Center Value:</string>
    <string name="max_input">Max</string>
    <string name="min_input">Min</string>
    <string name="remove_link">Remove Link</string>
    <string name="minimum_pitch">260 Hz</string>
    <string name="maximum_pitch">1050 Hz</string>
    <string name="hz">Hz</string>
    <string name="clean_up">Clean Up</string>
    <string name="data_points">data points</string>
    <string name="saved_on_device">On Tablet</string>
    <string name="on">On</string>
    <string name="flutter">Flutter</string>
    <string name="no_relationship">No Relationship</string>
    <string name="time">Time</string>
    <string name="record_data_set">Record Data Set</string>
    <string name="for_how_long">For how long?</string>
    <string name="times_per">times per</string>
    <string name="data_set_name">Data Set Name</string>
    <string name="for_word">for</string>
    <string name="start_recording">Start Recording</string>
    <string name="empty_data_name">Data Set Name is required!</string>
    <string name="this_field_cannot_be_blank">This field cannot be blank.</string>
    <string name="this_field_cannot_be_blank_or_zero">This field cannot be blank or zero.</string>
    <string name="no_flutter_data_logs">To record data, please first connect your Flutter.</string>
    <string name="ok">Ok</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="this_year">This Year</string>
    <string name="warning">Warning</string>
    <string name="overwrite_message">The Flutter is currently recording data. Do you want it to stop?</string>
    <string name="stop_the_current_recoring">Stop the current recording</string>
    <string name="keep_the_current_recording">Keep the current recording</string>
    <string name="cancel_recording">Cancel Recording</string>
    <string name="collecting_data">Your flutter is now collecting data!</string>
    <string name="flutter_sample_question">How often should your Flutter take a sample?</string>
    <string name="name_your_data_set">Name your data set</string>
</resources>