<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group_main_menu">

        <item
            android:id="@+id/item_connect_flutter"
            android:orderInCategory="1"
            app:showAsAction="ifRoom"
            android:title="@string/connect_flutter"
            android:icon="@mipmap/ic_launcher"/>
        <item
            android:id="@+id/item_sensors"
            android:orderInCategory="2"
            app:showAsAction="ifRoom"
            android:title="@string/sensors"
            android:icon="@mipmap/ic_launcher"/>
        <item
            android:id="@+id/item_servos"
            android:orderInCategory="3"
            app:showAsAction="ifRoom"
            android:title="@string/servos"
            android:icon="@mipmap/ic_launcher"/>

        <item
            android:id="@+id/item_leds"
            android:orderInCategory="4"
            app:showAsAction="ifRoom"
            android:title="@string/leds"
            android:icon="@mipmap/ic_launcher"/>

        <item
            android:id="@+id/item_speaker"
            android:orderInCategory="5"
            app:showAsAction="ifRoom"
            android:title="@string/speaker"
            android:icon="@mipmap/ic_launcher" />

        <item
            android:id="@+id/item_data_los"
            android:orderInCategory="6"
            app:showAsAction="ifRoom"
            android:title="@string/data_los"
            android:icon="@mipmap/ic_launcher"/>

    </group>

</menu>