<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/image_light"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/light"
            android:drawableTop="@drawable/sensor_light"/>

        <TextView
            android:id="@+id/image_soil_moisture"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/soil_moisture"/>

        <TextView
            android:id="@+id/image_distance"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/distance"
            android:drawableTop="@drawable/sensor_distance"/>

        <TextView
            android:id="@+id/image_sound"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sound"
            android:drawableTop="@drawable/sensor_sound"/>

        <TextView
            android:id="@+id/image_wind_speed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/wind_speed"
            android:drawableTop="@drawable/sensor_wind_speed"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/image_humidity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/humidity"
            android:drawableTop="@drawable/sensor_humidity"/>

        <TextView
            android:id="@+id/image_temperature"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/temperature"
            android:drawableTop="@drawable/sensor_temperature"/>

        <TextView
            android:id="@+id/image_barometric_pressure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/barometric_pressure"
            android:drawableTop="@drawable/sensor_barometric_pressure"/>

        <TextView
            android:id="@+id/image_analog_unknown"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/analog"
            android:drawableTop="@drawable/sensor_analog"/>

        <TextView
            android:id="@+id/image_no_sensor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no_sensor"
            android:drawableTop="@drawable/sensor_no_sensor"/>

    </LinearLayout>

</LinearLayout>