<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_get_log"
        android:title="@string/get_log"
        android:icon="@mipmap/ic_launcher"
        app:showAsAction="ifRoom|collapseActionView"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:checkable="false"/>

    <item
        android:id="@+id/item_open_log"
        android:title="@string/open_log"
        android:icon="@mipmap/ic_launcher"
        app:showAsAction="ifRoom|collapseActionView"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:checkable="false"/>

    <item
        android:id="@+id/item_send_log"
        android:title="@string/send_log"
        android:icon="@mipmap/ic_launcher"
        app:showAsAction="ifRoom|collapseActionView"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:checkable="false"/>

    <item
        android:id="@+id/item_clean_up_logs"
        android:title="@string/clean_up_logs"
        android:icon="@mipmap/ic_launcher"
        app:showAsAction="ifRoom|collapseActionView"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:checkable="false"/>

</menu>