<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/warning"
        android:layout_gravity="center"
        android:padding="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overwrite_message"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/button_stop_recording"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stop_the_current_recoring"
            android:textColor="@color/white"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_keep_recording"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keep_the_current_recording"
            android:textColor="@color/white"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>