<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/record_data_set"/>

    <EditText
        android:id="@+id/edit_data_set_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/data_set_name"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_how_long"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <EditText
            android:id="@+id/edit_number_of_intervals"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/zero"
            android:gravity="center"
            android:padding="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/times_per"
            android:padding="2dp"/>

        <Spinner
            android:id="@+id/spinner_dropdown_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:gravity="center"
            android:padding="2dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/for_word"
            android:padding="2dp"/>

        <EditText
            android:id="@+id/edit_time_period"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/zero"
            android:gravity="center"
            android:padding="2dp"/>

        <Spinner
            android:id="@+id/spinner_dropdown_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:gravity="center"
            android:padding="2dp" />

    </LinearLayout>

</LinearLayout>