<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/record_data_set"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/name_your_data_set"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="2dp"/>

        <com.rockerhieu.emojicon.EmojiconEditText
            android:id="@+id/edit_data_set_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data_set_name"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="text"
            android:imeOptions="actionNext"/>

    </LinearLayout>

    <include layout="@layout/record_data_buttons"/>

</LinearLayout>